--- a/index.html
+++ b/index.html
@@ -200,6 +200,17 @@ body.dark #toggle {
         <h4 class="date">March 2019</h4>
       </div>
     </div>
+    <div id="Extra-Curricular">
+      <h3><b>Extra-Curriculars</b></h3>
+      <hr />
+      <h3><b>NCC Cadet-Lance Corporal</b></h3>
+      <ul>
+        <li>Recieved B certificate and got recommended for Army's Services Selection Board(SSB) twice</li>
+        <li>Was one of 30 cadets from entire Battalion to get selected for Basic Leadership Camp(BLC)</li>
+        <li>Participated in 2 Annual Training Camps in Madurai and got awarded certificate for my performance in these Camps</li>
+      </ul>
+
+    </div>
   </div>
 
   <script>
